namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    shared-gateway-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: develop
  labels:
    shared-gateway-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    shared-gateway-access: "true"
