deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deploy
  labels:
    app: demo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-deploy
  template:
    metadata:
      labels:
        app: demo-deploy
    spec:
      containers:
      - name: demo-deploy
        image: us-west2-docker.pkg.dev/dazzling-byway-418414/demo/develop:5516533a6b85ef1d510ac77c37fc3cfdc7717d84
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: demo-deploy
spec:
  selector:
    app: demo-deploy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "qkqhro"
    networking.gke.io/managed-certificates: "qkqhro"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: "qkqhro.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-deploy
                port:
                  number: 80
