ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "qkqhro"
    networking.gke.io/managed-certificates: "qkqhro"
spec:
  rules:
    - host: qkqhro.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-deploy
                namespace: default
                port:
                  number: 8080
    - host: abc.qkqhro.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-1-service
                namespace: nginx
                port:
                  number: 80
---
# apiVersion: networking.gke.io/v1
# kind: ManagedCertificate
# metadata:
#   name: qkqhro
# spec:
#   domains:
#     - qkqhro.com
