nginx-external.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: develop
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "qkqhro.com"
  rules:
    - backendRefs:
        - name: nginx-1-service
          port: 80
