route-external.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ngingx
  namespace: production
spec:
  parentRefs:
    - name: shared-gateway
      namespace: infra
  hostnames:
    - "dev.qkqhro.com"
  rules:
    - backendRefs:
        - name: nginx-2-service
          port: 80
